@@ -48,7 +48,7 @@ class CTriggersInfo extends CTable {
 		$triggersOkState = 0;
 
 		$options = [
-			'output' => ['triggerid'],
+			'output' => ['triggerid', 'priority', 'value'],
 			'monitored' => true,
 			'skipDependent' => true
 		];
@@ -57,26 +57,19 @@ class CTriggersInfo extends CTable {
 			$options['groupids'] = $this->groupid;
 		}
 		$triggers = API::Trigger()->get($options);
-		$triggers = zbx_objectValues($triggers, 'triggerid');
 
-		$db_priority = DBselect(
-			'SELECT t.priority,t.value,count(DISTINCT t.triggerid) AS cnt'.
-			' FROM triggers t'.
-			' WHERE '.dbConditionInt('t.triggerid', $triggers).
-			' GROUP BY t.priority,t.value'
-		);
-		while ($row = DBfetch($db_priority)) {
-			switch ($row['value']) {
+		foreach ($triggers as $trigger) {
+			switch ($trigger['value']) {
 				case TRIGGER_VALUE_TRUE:
-					if (!isset($triggersProblemState[$row['priority']])) {
-						$triggersProblemState[$row['priority']] = 0;
+					if (!array_key_exists($trigger['priority'], $triggersProblemState)) {
+						$triggersProblemState[$trigger['priority']] = 0;
 					}
 
-					$triggersProblemState[$row['priority']] += $row['cnt'];
+					$triggersProblemState[$trigger['priority']]++;
 					break;
 
 				case TRIGGER_VALUE_FALSE:
-					$triggersOkState += $row['cnt'];
+					$triggersOkState++;
 			}
 		}
 
